{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 2308,
  "lineage": "a1ad0426-0a84-188d-af72-792d9d0f82f3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "internet_gateway_info",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:internet-gateway/igw-096b12414bcd71dc5",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-06d548fa782df8d8e"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-06d548fa782df8d8e"
                ]
              }
            ],
            "id": "igw-096b12414bcd71dc5",
            "internet_gateway_id": "igw-096b12414bcd71dc5",
            "owner_id": "038462790556",
            "tags": {
              "Name": "cicd-internet_gw"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_info",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:vpc/vpc-06d548fa782df8d8e",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04f6cc094bbd8db34",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0a03607f9ce8a9f22",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06d548fa782df8d8e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0216e210f1ebd24ef",
            "owner_id": "038462790556",
            "tags": {
              "Name": "cicd"
            }
          }
        }
      ]
    },
    {
      "module": "module.sol_bastion_node[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sol_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0cd2f78e9ef322a",
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:instance/i-03f1cc0a0d9cbd3b8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03f1cc0a0d9cbd3b8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "cicd-dev-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-080722778d2cb94ba"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-080722778d2cb94ba",
            "private_dns": "ip-10-0-1-13.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.13",
            "public_dns": "ec2-13-125-187-233.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.187.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09b68593aaa129f31",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-029bb56482ad71361",
            "tags": {
              "Name": "cicd-dev-jumpbox-0"
            },
            "tags_all": {
              "Name": "cicd-dev-jumpbox-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a216b52048860cb"
            ]
          },
          "dependencies": [
            "aws_key_pair.sol_loginkey",
            "data.aws_vpc.vpc_info",
            "module.sol_jumpbox_sg.aws_security_group.sol_sg",
            "module.sol_nic_public.aws_network_interface.sol_nic",
            "module.sol_subnet_public.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_default_route[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "sol_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-096b12414bcd71dc5",
            "id": "r-rtb-0216e210f1ebd24ef1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0216e210f1ebd24ef",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_default_route_table[0]",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "sol_default_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:route-table/rtb-0216e210f1ebd24ef",
            "default_route_table_id": "rtb-0216e210f1ebd24ef",
            "id": "rtb-0216e210f1ebd24ef",
            "owner_id": "038462790556",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-096b12414bcd71dc5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cicd-main_route_table"
            },
            "tags_all": {
              "Name": "cicd-main_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_eip_for_ec2[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "sol_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06924ad02c68d5c08",
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:elastic-ip/eipalloc-06924ad02c68d5c08",
            "association_id": "eipassoc-0ea2d5401a60d0b8b",
            "domain": "vpc",
            "id": "eipalloc-06924ad02c68d5c08",
            "instance": "i-03f1cc0a0d9cbd3b8",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-080722778d2cb94ba",
            "private_dns": "ip-10-0-1-13.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.13",
            "public_dns": "ec2-13-125-187-233.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.187.233",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cicd-dev-ap-northeast-2a-ec2-eip"
            },
            "tags_all": {
              "Name": "cicd-dev-ap-northeast-2a-ec2-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_infra_lb_sg[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sol_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:security-group/sg-0f8b2961fcac48e2e",
            "description": "Security Group For infra lb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8b2961fcac48e2e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "220.118.2.248/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "cicd-dev-infra-lb-sg",
            "name_prefix": "",
            "owner_id": "038462790556",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cicd-dev-infra-lb-sg",
              "kubernetes.io/cluster/cicd/dev": "owned"
            },
            "tags_all": {
              "Name": "cicd-dev-infra-lb-sg",
              "kubernetes.io/cluster/cicd/dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_infra_node[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sol_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0cd2f78e9ef322a",
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:instance/i-0bab3b417cbf96f61",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 210,
                "throughput": 0,
                "volume_id": "vol-08e62226d002b4309",
                "volume_size": 70,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bab3b417cbf96f61",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "cicd-dev-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-05f1d41bd88c05b75"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05f1d41bd88c05b75",
            "private_dns": "ip-10-0-2-85.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0672c46227f906fea",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01968b47ffba345a8",
            "tags": {
              "Name": "cicd-dev-infra-0"
            },
            "tags_all": {
              "Name": "cicd-dev-infra-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-056140f65e856609e"
            ]
          },
          "dependencies": [
            "aws_key_pair.sol_loginkey",
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_infra_sg.aws_security_group.sol_sg",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_nic_private.aws_network_interface.sol_nic",
            "module.sol_subnet_private.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_infra_sg[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sol_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:security-group/sg-056140f65e856609e",
            "description": "Security Group For Infra Node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056140f65e856609e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "220.118.2.248/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "3.39.156.3/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "cicd-dev-infra-sg",
            "name_prefix": "",
            "owner_id": "038462790556",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cicd-dev-infra-sg",
              "kubernetes.io/cluster/cicd/dev": "owned"
            },
            "tags_all": {
              "Name": "cicd-dev-infra-sg",
              "kubernetes.io/cluster/cicd/dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_internet_gateway[0]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sol_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:internet-gateway/igw-096b12414bcd71dc5",
            "id": "igw-096b12414bcd71dc5",
            "owner_id": "038462790556",
            "tags": {
              "Name": "cicd-internet_gw"
            },
            "tags_all": {
              "Name": "cicd-internet_gw"
            },
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "dependencies": [
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_jumpbox_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sol_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:security-group/sg-03a216b52048860cb",
            "description": "Security Group For Jumpbox",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a216b52048860cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "220.118.2.248/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "cicd-dev-jumpbox-sg",
            "name_prefix": "",
            "owner_id": "038462790556",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cicd-dev-jumpbox-sg",
              "kubernetes.io/cluster/cicd/dev": "owned"
            },
            "tags_all": {
              "Name": "cicd-dev-jumpbox-sg",
              "kubernetes.io/cluster/cicd/dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_k8s_lb_sg[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sol_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:security-group/sg-028225525c04c0431",
            "description": "Security Group For k8s lb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028225525c04c0431",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "220.118.2.248/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "cicd-dev-k8s-lb-sg",
            "name_prefix": "",
            "owner_id": "038462790556",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cicd-dev-k8s-lb-sg",
              "kubernetes.io/cluster/cicd/dev": "owned"
            },
            "tags_all": {
              "Name": "cicd-dev-k8s-lb-sg",
              "kubernetes.io/cluster/cicd/dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_infra[0]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "sol_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-infra-lb/c610f94d04937e8d",
            "arn_suffix": "net/cicd-dev-infra-lb/c610f94d04937e8d",
            "dns_name": "cicd-dev-infra-lb-c610f94d04937e8d.elb.ap-northeast-2.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-infra-lb/c610f94d04937e8d",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "cicd-dev-infra-lb",
            "security_groups": [
              "sg-0f8b2961fcac48e2e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-029bb56482ad71361"
              }
            ],
            "subnets": [
              "subnet-029bb56482ad71361"
            ],
            "tags": {
              "Name": "cicd-dev-infra-lb",
              "kubernetes.io/cluster/cicd/dev": "owned"
            },
            "tags_all": {
              "Name": "cicd-dev-infra-lb",
              "kubernetes.io/cluster/cicd/dev": "owned"
            },
            "vpc_id": "vpc-06d548fa782df8d8e",
            "zone_id": "ZIBE1TIR4HY56"
          },
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_infra_lb_sg.aws_security_group.sol_sg",
            "module.sol_subnet_public.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_infra_target_group[0]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sol_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-harbor/63a3d029d5dd027f",
            "arn_suffix": "targetgroup/cicd-dev-infra-tg-harbor/63a3d029d5dd027f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "5443",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-harbor/63a3d029d5dd027f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-infra-lb/c610f94d04937e8d"
            ],
            "load_balancing_cross_zone_enabled": "false",
            "name": "cicd-dev-infra-tg-harbor",
            "port": 5443,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "cicd-dev-infra-tg-harbor"
            },
            "tags_all": {
              "Name": "cicd-dev-infra-tg-harbor"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_infra_target_group[1]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sol_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-gitlab/106dcfd7a742adf3",
            "arn_suffix": "targetgroup/cicd-dev-infra-tg-gitlab/106dcfd7a742adf3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "8443",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-gitlab/106dcfd7a742adf3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-infra-lb/c610f94d04937e8d"
            ],
            "load_balancing_cross_zone_enabled": "false",
            "name": "cicd-dev-infra-tg-gitlab",
            "port": 8443,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "cicd-dev-infra-tg-gitlab"
            },
            "tags_all": {
              "Name": "cicd-dev-infra-tg-gitlab"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_infra_target_group[2]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sol_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-nexus/dc37e208eafe4d26",
            "arn_suffix": "targetgroup/cicd-dev-infra-tg-nexus/dc37e208eafe4d26",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "8081",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-nexus/dc37e208eafe4d26",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-infra-lb/c610f94d04937e8d"
            ],
            "load_balancing_cross_zone_enabled": "false",
            "name": "cicd-dev-infra-tg-nexus",
            "port": 8081,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "cicd-dev-infra-tg-nexus"
            },
            "tags_all": {
              "Name": "cicd-dev-infra-tg-nexus"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_infra_target_group[3]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sol_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-jenkins/6d0b3b7a3a9c7d33",
            "arn_suffix": "targetgroup/cicd-dev-infra-tg-jenkins/6d0b3b7a3a9c7d33",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "8080",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-jenkins/6d0b3b7a3a9c7d33",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-infra-lb/c610f94d04937e8d"
            ],
            "load_balancing_cross_zone_enabled": "false",
            "name": "cicd-dev-infra-tg-jenkins",
            "port": 8080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "cicd-dev-infra-tg-jenkins"
            },
            "tags_all": {
              "Name": "cicd-dev-infra-tg-jenkins"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_infra_target_group[4]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sol_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-mysql/17bc37aa9e2180d7",
            "arn_suffix": "targetgroup/cicd-dev-infra-tg-mysql/17bc37aa9e2180d7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "9000",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-mysql/17bc37aa9e2180d7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-infra-lb/c610f94d04937e8d"
            ],
            "load_balancing_cross_zone_enabled": "false",
            "name": "cicd-dev-infra-tg-mysql",
            "port": 9000,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "cicd-dev-infra-tg-mysql"
            },
            "tags_all": {
              "Name": "cicd-dev-infra-tg-mysql"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_infra_target_group[5]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sol_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-mattermost/8b53c5fe3d5bc2ab",
            "arn_suffix": "targetgroup/cicd-dev-infra-tg-mattermost/8b53c5fe3d5bc2ab",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "8085",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-mattermost/8b53c5fe3d5bc2ab",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-infra-lb/c610f94d04937e8d"
            ],
            "load_balancing_cross_zone_enabled": "false",
            "name": "cicd-dev-infra-tg-mattermost",
            "port": 8085,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "cicd-dev-infra-tg-mattermost"
            },
            "tags_all": {
              "Name": "cicd-dev-infra-tg-mattermost"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_infra_target_group_attachment_infra1[0]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sol_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-harbor/63a3d029d5dd027f-20250321004527575400000006",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-harbor/63a3d029d5dd027f",
            "target_id": "i-0bab3b417cbf96f61"
          },
          "dependencies": [
            "aws_key_pair.sol_loginkey",
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_infra_node.aws_instance.sol_ec2",
            "module.sol_infra_sg.aws_security_group.sol_sg",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_lb_infra_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_nic_private.aws_network_interface.sol_nic",
            "module.sol_subnet_private.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_infra_target_group_attachment_infra1[1]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sol_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-gitlab/106dcfd7a742adf3-20250321004527792800000009",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-gitlab/106dcfd7a742adf3",
            "target_id": "i-0bab3b417cbf96f61"
          },
          "dependencies": [
            "aws_key_pair.sol_loginkey",
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_infra_node.aws_instance.sol_ec2",
            "module.sol_infra_sg.aws_security_group.sol_sg",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_lb_infra_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_nic_private.aws_network_interface.sol_nic",
            "module.sol_subnet_private.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_infra_target_group_attachment_infra1[2]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sol_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-nexus/dc37e208eafe4d26-20250321004527560200000005",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-nexus/dc37e208eafe4d26",
            "target_id": "i-0bab3b417cbf96f61"
          },
          "dependencies": [
            "aws_key_pair.sol_loginkey",
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_infra_node.aws_instance.sol_ec2",
            "module.sol_infra_sg.aws_security_group.sol_sg",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_lb_infra_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_nic_private.aws_network_interface.sol_nic",
            "module.sol_subnet_private.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_infra_target_group_attachment_infra1[3]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sol_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-jenkins/6d0b3b7a3a9c7d33-20250321004527766500000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-jenkins/6d0b3b7a3a9c7d33",
            "target_id": "i-0bab3b417cbf96f61"
          },
          "dependencies": [
            "aws_key_pair.sol_loginkey",
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_infra_node.aws_instance.sol_ec2",
            "module.sol_infra_sg.aws_security_group.sol_sg",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_lb_infra_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_nic_private.aws_network_interface.sol_nic",
            "module.sol_subnet_private.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_infra_target_group_attachment_infra1[4]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sol_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-mysql/17bc37aa9e2180d7-20250321004527609700000007",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-mysql/17bc37aa9e2180d7",
            "target_id": "i-0bab3b417cbf96f61"
          },
          "dependencies": [
            "aws_key_pair.sol_loginkey",
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_infra_node.aws_instance.sol_ec2",
            "module.sol_infra_sg.aws_security_group.sol_sg",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_lb_infra_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_nic_private.aws_network_interface.sol_nic",
            "module.sol_subnet_private.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_infra_target_group_attachment_infra1[5]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sol_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-mattermost/8b53c5fe3d5bc2ab-2025032100452920160000000a",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-mattermost/8b53c5fe3d5bc2ab",
            "target_id": "i-0bab3b417cbf96f61"
          },
          "dependencies": [
            "aws_key_pair.sol_loginkey",
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_infra_node.aws_instance.sol_ec2",
            "module.sol_infra_sg.aws_security_group.sol_sg",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_lb_infra_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_nic_private.aws_network_interface.sol_nic",
            "module.sol_subnet_private.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s[0]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "sol_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-k8s-lb/4db7d1db65a87a4d",
            "arn_suffix": "net/cicd-dev-k8s-lb/4db7d1db65a87a4d",
            "dns_name": "cicd-dev-k8s-lb-4db7d1db65a87a4d.elb.ap-northeast-2.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-k8s-lb/4db7d1db65a87a4d",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "cicd-dev-k8s-lb",
            "security_groups": [
              "sg-028225525c04c0431"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-029bb56482ad71361"
              }
            ],
            "subnets": [
              "subnet-029bb56482ad71361"
            ],
            "tags": {
              "Name": "cicd-dev-k8s-lb",
              "kubernetes.io/cluster/cicd/dev": "owned"
            },
            "tags_all": {
              "Name": "cicd-dev-k8s-lb",
              "kubernetes.io/cluster/cicd/dev": "owned"
            },
            "vpc_id": "vpc-06d548fa782df8d8e",
            "zone_id": "ZIBE1TIR4HY56"
          },
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_k8s_lb_sg.aws_security_group.sol_sg",
            "module.sol_subnet_public.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_listener[0]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sol_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-k8s-lb/4db7d1db65a87a4d/2cf57837407c0c40",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-k8s/92d47c8a5f08856d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-k8s-lb/4db7d1db65a87a4d/2cf57837407c0c40",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-k8s-lb/4db7d1db65a87a4d",
            "mutual_authentication": [],
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 360,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_k8s_lb_sg.aws_security_group.sol_sg",
            "module.sol_lb_k8s.aws_lb.sol_lb",
            "module.sol_lb_k8s_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_subnet_public.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_listener[1]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sol_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-k8s-lb/4db7d1db65a87a4d/86e1b3e54691836c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-grafana/1c00624d78333b7d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-k8s-lb/4db7d1db65a87a4d/86e1b3e54691836c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-k8s-lb/4db7d1db65a87a4d",
            "mutual_authentication": [],
            "port": 31020,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 360,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_k8s_lb_sg.aws_security_group.sol_sg",
            "module.sol_lb_k8s.aws_lb.sol_lb",
            "module.sol_lb_k8s_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_subnet_public.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_listener[2]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sol_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-k8s-lb/4db7d1db65a87a4d/715145a1f59f7373",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-kiali/b981a93c53ee5781",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-k8s-lb/4db7d1db65a87a4d/715145a1f59f7373",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-k8s-lb/4db7d1db65a87a4d",
            "mutual_authentication": [],
            "port": 31030,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 360,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_k8s_lb_sg.aws_security_group.sol_sg",
            "module.sol_lb_k8s.aws_lb.sol_lb",
            "module.sol_lb_k8s_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_subnet_public.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_listener[3]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sol_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-k8s-lb/4db7d1db65a87a4d/ec1d3f928739c9e2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-jaeger/e44922193642e6b7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-k8s-lb/4db7d1db65a87a4d/ec1d3f928739c9e2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-k8s-lb/4db7d1db65a87a4d",
            "mutual_authentication": [],
            "port": 31050,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 360,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_k8s_lb_sg.aws_security_group.sol_sg",
            "module.sol_lb_k8s.aws_lb.sol_lb",
            "module.sol_lb_k8s_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_subnet_public.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_listener[4]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sol_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-k8s-lb/4db7d1db65a87a4d/e3eb11ffb0ffe7c4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-p8s/732cad84b3a76410",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-k8s-lb/4db7d1db65a87a4d/e3eb11ffb0ffe7c4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-k8s-lb/4db7d1db65a87a4d",
            "mutual_authentication": [],
            "port": 31060,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 360,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_k8s_lb_sg.aws_security_group.sol_sg",
            "module.sol_lb_k8s.aws_lb.sol_lb",
            "module.sol_lb_k8s_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_subnet_public.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_listener[5]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sol_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-k8s-lb/4db7d1db65a87a4d/7d1c870850666156",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-istio/70998015a45be291",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-k8s-lb/4db7d1db65a87a4d/7d1c870850666156",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-k8s-lb/4db7d1db65a87a4d",
            "mutual_authentication": [],
            "port": 30080,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 360,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_k8s_lb_sg.aws_security_group.sol_sg",
            "module.sol_lb_k8s.aws_lb.sol_lb",
            "module.sol_lb_k8s_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_subnet_public.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_listener[6]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sol_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-k8s-lb/4db7d1db65a87a4d/043cef8c0d04bdcb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-argocd/d7c90980bdad6be9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-k8s-lb/4db7d1db65a87a4d/043cef8c0d04bdcb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-k8s-lb/4db7d1db65a87a4d",
            "mutual_authentication": [],
            "port": 31080,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 360,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_k8s_lb_sg.aws_security_group.sol_sg",
            "module.sol_lb_k8s.aws_lb.sol_lb",
            "module.sol_lb_k8s_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_subnet_public.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_listener[7]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sol_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-k8s-lb/4db7d1db65a87a4d/5b0e37b381f26bef",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-argo-tls/34ce0d624a8a6e7f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-k8s-lb/4db7d1db65a87a4d/5b0e37b381f26bef",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-k8s-lb/4db7d1db65a87a4d",
            "mutual_authentication": [],
            "port": 31081,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 360,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_k8s_lb_sg.aws_security_group.sol_sg",
            "module.sol_lb_k8s.aws_lb.sol_lb",
            "module.sol_lb_k8s_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_subnet_public.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_target_group[0]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sol_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-k8s/92d47c8a5f08856d",
            "arn_suffix": "targetgroup/cicd-dev-k8s-tg-k8s/92d47c8a5f08856d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "6443",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-k8s/92d47c8a5f08856d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-k8s-lb/4db7d1db65a87a4d"
            ],
            "load_balancing_cross_zone_enabled": "false",
            "name": "cicd-dev-k8s-tg-k8s",
            "port": 6443,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "cicd-dev-k8s-tg-k8s"
            },
            "tags_all": {
              "Name": "cicd-dev-k8s-tg-k8s"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_target_group[1]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sol_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-grafana/1c00624d78333b7d",
            "arn_suffix": "targetgroup/cicd-dev-k8s-tg-grafana/1c00624d78333b7d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "31020",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-grafana/1c00624d78333b7d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-k8s-lb/4db7d1db65a87a4d"
            ],
            "load_balancing_cross_zone_enabled": "false",
            "name": "cicd-dev-k8s-tg-grafana",
            "port": 31020,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "cicd-dev-k8s-tg-grafana"
            },
            "tags_all": {
              "Name": "cicd-dev-k8s-tg-grafana"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_target_group[2]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sol_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-kiali/b981a93c53ee5781",
            "arn_suffix": "targetgroup/cicd-dev-k8s-tg-kiali/b981a93c53ee5781",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "31030",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-kiali/b981a93c53ee5781",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-k8s-lb/4db7d1db65a87a4d"
            ],
            "load_balancing_cross_zone_enabled": "false",
            "name": "cicd-dev-k8s-tg-kiali",
            "port": 31030,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "cicd-dev-k8s-tg-kiali"
            },
            "tags_all": {
              "Name": "cicd-dev-k8s-tg-kiali"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_target_group[3]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sol_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-jaeger/e44922193642e6b7",
            "arn_suffix": "targetgroup/cicd-dev-k8s-tg-jaeger/e44922193642e6b7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "31050",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-jaeger/e44922193642e6b7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-k8s-lb/4db7d1db65a87a4d"
            ],
            "load_balancing_cross_zone_enabled": "false",
            "name": "cicd-dev-k8s-tg-jaeger",
            "port": 31050,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "cicd-dev-k8s-tg-jaeger"
            },
            "tags_all": {
              "Name": "cicd-dev-k8s-tg-jaeger"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_target_group[4]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sol_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-p8s/732cad84b3a76410",
            "arn_suffix": "targetgroup/cicd-dev-k8s-tg-p8s/732cad84b3a76410",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "31060",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-p8s/732cad84b3a76410",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-k8s-lb/4db7d1db65a87a4d"
            ],
            "load_balancing_cross_zone_enabled": "false",
            "name": "cicd-dev-k8s-tg-p8s",
            "port": 31060,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "cicd-dev-k8s-tg-p8s"
            },
            "tags_all": {
              "Name": "cicd-dev-k8s-tg-p8s"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_target_group[5]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sol_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-istio/70998015a45be291",
            "arn_suffix": "targetgroup/cicd-dev-k8s-tg-istio/70998015a45be291",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "30080",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-istio/70998015a45be291",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-k8s-lb/4db7d1db65a87a4d"
            ],
            "load_balancing_cross_zone_enabled": "false",
            "name": "cicd-dev-k8s-tg-istio",
            "port": 30080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "cicd-dev-k8s-tg-istio"
            },
            "tags_all": {
              "Name": "cicd-dev-k8s-tg-istio"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_target_group[6]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sol_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-argocd/d7c90980bdad6be9",
            "arn_suffix": "targetgroup/cicd-dev-k8s-tg-argocd/d7c90980bdad6be9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "31080",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-argocd/d7c90980bdad6be9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-k8s-lb/4db7d1db65a87a4d"
            ],
            "load_balancing_cross_zone_enabled": "false",
            "name": "cicd-dev-k8s-tg-argocd",
            "port": 31080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "cicd-dev-k8s-tg-argocd"
            },
            "tags_all": {
              "Name": "cicd-dev-k8s-tg-argocd"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_target_group[7]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sol_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-argo-tls/34ce0d624a8a6e7f",
            "arn_suffix": "targetgroup/cicd-dev-k8s-tg-argo-tls/34ce0d624a8a6e7f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "31081",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-argo-tls/34ce0d624a8a6e7f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-k8s-lb/4db7d1db65a87a4d"
            ],
            "load_balancing_cross_zone_enabled": "false",
            "name": "cicd-dev-k8s-tg-argo-tls",
            "port": 31081,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "cicd-dev-k8s-tg-argo-tls"
            },
            "tags_all": {
              "Name": "cicd-dev-k8s-tg-argo-tls"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_target_group_attachment_master1[0]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sol_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-k8s/92d47c8a5f08856d-20250321004541486700000012",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-k8s/92d47c8a5f08856d",
            "target_id": "i-013d24660223b463d"
          },
          "dependencies": [
            "aws_key_pair.sol_loginkey",
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_iam_master_profile.aws_iam_instance_profile.sol_iam_profile",
            "module.sol_iam_master_role.aws_iam_role.sol_iam_role",
            "module.sol_infra_node.aws_instance.sol_ec2",
            "module.sol_infra_sg.aws_security_group.sol_sg",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_lb_k8s_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_master_node.aws_instance.sol_ec2",
            "module.sol_master_sg.aws_security_group.sol_sg",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_nic_master.aws_network_interface.sol_nic",
            "module.sol_nic_private.aws_network_interface.sol_nic",
            "module.sol_subnet_private.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_target_group_attachment_master1[1]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sol_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-grafana/1c00624d78333b7d-20250321004540811400000010",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-grafana/1c00624d78333b7d",
            "target_id": "i-013d24660223b463d"
          },
          "dependencies": [
            "aws_key_pair.sol_loginkey",
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_iam_master_profile.aws_iam_instance_profile.sol_iam_profile",
            "module.sol_iam_master_role.aws_iam_role.sol_iam_role",
            "module.sol_infra_node.aws_instance.sol_ec2",
            "module.sol_infra_sg.aws_security_group.sol_sg",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_lb_k8s_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_master_node.aws_instance.sol_ec2",
            "module.sol_master_sg.aws_security_group.sol_sg",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_nic_master.aws_network_interface.sol_nic",
            "module.sol_nic_private.aws_network_interface.sol_nic",
            "module.sol_subnet_private.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_target_group_attachment_master1[2]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sol_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-kiali/b981a93c53ee5781-2025032100454052540000000d",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-kiali/b981a93c53ee5781",
            "target_id": "i-013d24660223b463d"
          },
          "dependencies": [
            "aws_key_pair.sol_loginkey",
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_iam_master_profile.aws_iam_instance_profile.sol_iam_profile",
            "module.sol_iam_master_role.aws_iam_role.sol_iam_role",
            "module.sol_infra_node.aws_instance.sol_ec2",
            "module.sol_infra_sg.aws_security_group.sol_sg",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_lb_k8s_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_master_node.aws_instance.sol_ec2",
            "module.sol_master_sg.aws_security_group.sol_sg",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_nic_master.aws_network_interface.sol_nic",
            "module.sol_nic_private.aws_network_interface.sol_nic",
            "module.sol_subnet_private.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_target_group_attachment_master1[3]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sol_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-jaeger/e44922193642e6b7-2025032100454046240000000b",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-jaeger/e44922193642e6b7",
            "target_id": "i-013d24660223b463d"
          },
          "dependencies": [
            "aws_key_pair.sol_loginkey",
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_iam_master_profile.aws_iam_instance_profile.sol_iam_profile",
            "module.sol_iam_master_role.aws_iam_role.sol_iam_role",
            "module.sol_infra_node.aws_instance.sol_ec2",
            "module.sol_infra_sg.aws_security_group.sol_sg",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_lb_k8s_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_master_node.aws_instance.sol_ec2",
            "module.sol_master_sg.aws_security_group.sol_sg",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_nic_master.aws_network_interface.sol_nic",
            "module.sol_nic_private.aws_network_interface.sol_nic",
            "module.sol_subnet_private.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_target_group_attachment_master1[4]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sol_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-p8s/732cad84b3a76410-2025032100454048790000000c",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-p8s/732cad84b3a76410",
            "target_id": "i-013d24660223b463d"
          },
          "dependencies": [
            "aws_key_pair.sol_loginkey",
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_iam_master_profile.aws_iam_instance_profile.sol_iam_profile",
            "module.sol_iam_master_role.aws_iam_role.sol_iam_role",
            "module.sol_infra_node.aws_instance.sol_ec2",
            "module.sol_infra_sg.aws_security_group.sol_sg",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_lb_k8s_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_master_node.aws_instance.sol_ec2",
            "module.sol_master_sg.aws_security_group.sol_sg",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_nic_master.aws_network_interface.sol_nic",
            "module.sol_nic_private.aws_network_interface.sol_nic",
            "module.sol_subnet_private.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_target_group_attachment_master1[5]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sol_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-istio/70998015a45be291-2025032100454081080000000f",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-istio/70998015a45be291",
            "target_id": "i-013d24660223b463d"
          },
          "dependencies": [
            "aws_key_pair.sol_loginkey",
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_iam_master_profile.aws_iam_instance_profile.sol_iam_profile",
            "module.sol_iam_master_role.aws_iam_role.sol_iam_role",
            "module.sol_infra_node.aws_instance.sol_ec2",
            "module.sol_infra_sg.aws_security_group.sol_sg",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_lb_k8s_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_master_node.aws_instance.sol_ec2",
            "module.sol_master_sg.aws_security_group.sol_sg",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_nic_master.aws_network_interface.sol_nic",
            "module.sol_nic_private.aws_network_interface.sol_nic",
            "module.sol_subnet_private.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_target_group_attachment_master1[6]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sol_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-argocd/d7c90980bdad6be9-20250321004540974500000011",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-argocd/d7c90980bdad6be9",
            "target_id": "i-013d24660223b463d"
          },
          "dependencies": [
            "aws_key_pair.sol_loginkey",
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_iam_master_profile.aws_iam_instance_profile.sol_iam_profile",
            "module.sol_iam_master_role.aws_iam_role.sol_iam_role",
            "module.sol_infra_node.aws_instance.sol_ec2",
            "module.sol_infra_sg.aws_security_group.sol_sg",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_lb_k8s_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_master_node.aws_instance.sol_ec2",
            "module.sol_master_sg.aws_security_group.sol_sg",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_nic_master.aws_network_interface.sol_nic",
            "module.sol_nic_private.aws_network_interface.sol_nic",
            "module.sol_subnet_private.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_k8s_target_group_attachment_master1[7]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sol_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-argo-tls/34ce0d624a8a6e7f-2025032100454057370000000e",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-k8s-tg-argo-tls/34ce0d624a8a6e7f",
            "target_id": "i-013d24660223b463d"
          },
          "dependencies": [
            "aws_key_pair.sol_loginkey",
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_iam_master_profile.aws_iam_instance_profile.sol_iam_profile",
            "module.sol_iam_master_role.aws_iam_role.sol_iam_role",
            "module.sol_infra_node.aws_instance.sol_ec2",
            "module.sol_infra_sg.aws_security_group.sol_sg",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_lb_k8s_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_master_node.aws_instance.sol_ec2",
            "module.sol_master_sg.aws_security_group.sol_sg",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_nic_master.aws_network_interface.sol_nic",
            "module.sol_nic_private.aws_network_interface.sol_nic",
            "module.sol_subnet_private.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_listener[0]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sol_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-infra-lb/c610f94d04937e8d/ebaaa548a7506615",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-harbor/63a3d029d5dd027f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-infra-lb/c610f94d04937e8d/ebaaa548a7506615",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-infra-lb/c610f94d04937e8d",
            "mutual_authentication": [],
            "port": 5443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 360,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_infra_lb_sg.aws_security_group.sol_sg",
            "module.sol_lb_infra.aws_lb.sol_lb",
            "module.sol_lb_infra_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_subnet_public.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_listener[1]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sol_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-infra-lb/c610f94d04937e8d/05871966589dda56",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-gitlab/106dcfd7a742adf3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-infra-lb/c610f94d04937e8d/05871966589dda56",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-infra-lb/c610f94d04937e8d",
            "mutual_authentication": [],
            "port": 8443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 360,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_infra_lb_sg.aws_security_group.sol_sg",
            "module.sol_lb_infra.aws_lb.sol_lb",
            "module.sol_lb_infra_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_subnet_public.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_listener[2]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sol_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-infra-lb/c610f94d04937e8d/897cc71cbe9d6947",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-nexus/dc37e208eafe4d26",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-infra-lb/c610f94d04937e8d/897cc71cbe9d6947",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-infra-lb/c610f94d04937e8d",
            "mutual_authentication": [],
            "port": 8081,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 360,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_infra_lb_sg.aws_security_group.sol_sg",
            "module.sol_lb_infra.aws_lb.sol_lb",
            "module.sol_lb_infra_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_subnet_public.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_listener[3]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sol_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-infra-lb/c610f94d04937e8d/30e29512ffa6245c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-jenkins/6d0b3b7a3a9c7d33",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-infra-lb/c610f94d04937e8d/30e29512ffa6245c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-infra-lb/c610f94d04937e8d",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 360,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_infra_lb_sg.aws_security_group.sol_sg",
            "module.sol_lb_infra.aws_lb.sol_lb",
            "module.sol_lb_infra_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_subnet_public.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_listener[4]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sol_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-infra-lb/c610f94d04937e8d/60376185d7c5f407",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-mysql/17bc37aa9e2180d7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-infra-lb/c610f94d04937e8d/60376185d7c5f407",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-infra-lb/c610f94d04937e8d",
            "mutual_authentication": [],
            "port": 9000,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 360,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_infra_lb_sg.aws_security_group.sol_sg",
            "module.sol_lb_infra.aws_lb.sol_lb",
            "module.sol_lb_infra_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_subnet_public.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_lb_listener[5]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sol_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-infra-lb/c610f94d04937e8d/f8ef7ef26d4ed625",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:targetgroup/cicd-dev-infra-tg-mattermost/8b53c5fe3d5bc2ab",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:listener/net/cicd-dev-infra-lb/c610f94d04937e8d/f8ef7ef26d4ed625",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:038462790556:loadbalancer/net/cicd-dev-infra-lb/c610f94d04937e8d",
            "mutual_authentication": [],
            "port": 8085,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 360,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_infra_lb_sg.aws_security_group.sol_sg",
            "module.sol_lb_infra.aws_lb.sol_lb",
            "module.sol_lb_infra_target_group.aws_lb_target_group.sol_target_group",
            "module.sol_subnet_public.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_master_node[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sol_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0cd2f78e9ef322a",
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:instance/i-013d24660223b463d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-024012599fc1f9ffb",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cicd-dev-master_profile",
            "id": "i-013d24660223b463d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "cicd-dev-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0e77f2c61b7cde98b"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e77f2c61b7cde98b",
            "private_dns": "ip-10-0-2-143.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-002af7bceb472b626",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01968b47ffba345a8",
            "tags": {
              "Name": "cicd-dev-master-0",
              "kubernetes.io/cluster/cicd/dev": "owned",
              "type": "cicd-dev"
            },
            "tags_all": {
              "Name": "cicd-dev-master-0",
              "kubernetes.io/cluster/cicd/dev": "owned",
              "type": "cicd-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eed2420e37f11e0f"
            ]
          },
          "dependencies": [
            "aws_key_pair.sol_loginkey",
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_iam_master_profile.aws_iam_instance_profile.sol_iam_profile",
            "module.sol_iam_master_role.aws_iam_role.sol_iam_role",
            "module.sol_infra_node.aws_instance.sol_ec2",
            "module.sol_infra_sg.aws_security_group.sol_sg",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_master_sg.aws_security_group.sol_sg",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_nic_master.aws_network_interface.sol_nic",
            "module.sol_nic_private.aws_network_interface.sol_nic",
            "module.sol_subnet_private.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_master_sg[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sol_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:security-group/sg-0eed2420e37f11e0f",
            "description": "Security Group For Master Node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eed2420e37f11e0f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "220.118.2.248/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "3.39.156.3/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "cicd-dev-master-sg",
            "name_prefix": "",
            "owner_id": "038462790556",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cicd-dev-master-sg",
              "kubernetes.io/cluster/cicd/dev": "owned"
            },
            "tags_all": {
              "Name": "cicd-dev-master-sg",
              "kubernetes.io/cluster/cicd/dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_nas_sg[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sol_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:security-group/sg-09ee0e66957a9b5d8",
            "description": "Security Group for NAS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ee0e66957a9b5d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "cicd-dev-nas-sg",
            "name_prefix": "",
            "owner_id": "038462790556",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cicd-dev-nas-sg",
              "kubernetes.io/cluster/cicd/dev": "owned"
            },
            "tags_all": {
              "Name": "cicd-dev-nas-sg",
              "kubernetes.io/cluster/cicd/dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_nat_eip[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "sol_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c333a6d5a21f9228",
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:elastic-ip/eipalloc-0c333a6d5a21f9228",
            "association_id": "eipassoc-06b3af5af42ba9361",
            "domain": "vpc",
            "id": "eipalloc-0c333a6d5a21f9228",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-03a4e5ed6e1563425",
            "private_dns": "ip-10-0-1-58.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.58",
            "public_dns": "ec2-3-39-156-3.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.156.3",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cicd-dev-ap-northeast-2a-nat-eip"
            },
            "tags_all": {
              "Name": "cicd-dev-ap-northeast-2a-nat-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_nat_gateway[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sol_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c333a6d5a21f9228",
            "association_id": "eipassoc-06b3af5af42ba9361",
            "connectivity_type": "public",
            "id": "nat-0176627ac4679c218",
            "network_interface_id": "eni-03a4e5ed6e1563425",
            "private_ip": "10.0.1.58",
            "public_ip": "3.39.156.3",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-029bb56482ad71361",
            "tags": {
              "Name": "cicd-dev-ap-northeast-2a-nat"
            },
            "tags_all": {
              "Name": "cicd-dev-ap-northeast-2a-nat"
            }
          },
          "dependencies": [
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_subnet_public.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_nic_master[0]",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "sol_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:network-interface/eni-0e77f2c61b7cde98b",
            "attachment": [
              {
                "attachment_id": "eni-attach-086e8e63dacf6f7ad",
                "device_index": 0,
                "instance": "i-013d24660223b463d"
              }
            ],
            "description": "For kubernetes master VM NIC",
            "id": "eni-0e77f2c61b7cde98b",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:27:6b:64:b9:13",
            "owner_id": "038462790556",
            "private_dns_name": "ip-10-0-2-143.ap-northeast-2.compute.internal",
            "private_ip": "10.0.2.143",
            "private_ip_list": [
              "10.0.2.143"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.143"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0eed2420e37f11e0f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01968b47ffba345a8",
            "tags": {
              "Name": "cicd-dev-0-master-nic",
              "kubernetes.io/cluster/cicd/dev": "owned"
            },
            "tags_all": {
              "Name": "cicd-dev-0-master-nic",
              "kubernetes.io/cluster/cicd/dev": "owned"
            }
          },
          "dependencies": [
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_master_sg.aws_security_group.sol_sg",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_subnet_private.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_nic_private[0]",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "sol_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:network-interface/eni-05f1d41bd88c05b75",
            "attachment": [
              {
                "attachment_id": "eni-attach-084fbd0c4c847d395",
                "device_index": 0,
                "instance": "i-0bab3b417cbf96f61"
              }
            ],
            "description": "For Private Infra VM NIC",
            "id": "eni-05f1d41bd88c05b75",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:b9:d7:0e:fa:b5",
            "owner_id": "038462790556",
            "private_dns_name": "ip-10-0-2-85.ap-northeast-2.compute.internal",
            "private_ip": "10.0.2.85",
            "private_ip_list": [
              "10.0.2.85"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.85"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-056140f65e856609e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01968b47ffba345a8",
            "tags": {
              "Name": "cicd-dev-0-infra-nic",
              "kubernetes.io/cluster/cicd/dev": "owned"
            },
            "tags_all": {
              "Name": "cicd-dev-0-infra-nic",
              "kubernetes.io/cluster/cicd/dev": "owned"
            }
          },
          "dependencies": [
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_infra_sg.aws_security_group.sol_sg",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_subnet_private.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_nic_public[0]",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "sol_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:network-interface/eni-080722778d2cb94ba",
            "attachment": [
              {
                "attachment_id": "eni-attach-0ec63e580c8e7fca4",
                "device_index": 0,
                "instance": "i-03f1cc0a0d9cbd3b8"
              }
            ],
            "description": "For Public Jumpbox VM NIC",
            "id": "eni-080722778d2cb94ba",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:72:cf:8a:23:81",
            "owner_id": "038462790556",
            "private_dns_name": "ip-10-0-1-13.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.13",
            "private_ip_list": [
              "10.0.1.13"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.13"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03a216b52048860cb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-029bb56482ad71361",
            "tags": {
              "Name": "cicd-dev-0-jumpbox-nic",
              "kubernetes.io/cluster/cicd/dev": "owned"
            },
            "tags_all": {
              "Name": "cicd-dev-0-jumpbox-nic",
              "kubernetes.io/cluster/cicd/dev": "owned"
            }
          },
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_jumpbox_sg.aws_security_group.sol_sg",
            "module.sol_subnet_public.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_private_acl[0]",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "sol_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:network-acl/acl-0a065264d8577374e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a065264d8577374e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "038462790556",
            "subnet_ids": [
              "subnet-01968b47ffba345a8"
            ],
            "tags": {
              "Name": "cicd-dev-private-0-acl"
            },
            "tags_all": {
              "Name": "cicd-dev-private-0-acl"
            },
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_subnet_private.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_private_route[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "sol_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-036bb21fbf7ad40941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0176627ac4679c218",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-036bb21fbf7ad4094",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_nat_gateway.aws_nat_gateway.sol_nat_gateway",
            "module.sol_route_table.aws_route_table.sol_route_table",
            "module.sol_subnet_public.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_private_route_table_associaion[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sol_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6ee4ed1d6bfb3eb",
            "route_table_id": "rtb-036bb21fbf7ad4094",
            "subnet_id": "subnet-01968b47ffba345a8"
          },
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_route_table.aws_route_table.sol_route_table",
            "module.sol_subnet_private.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_public_acl[0]",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "sol_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:network-acl/acl-008491950eac1f6ba",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-008491950eac1f6ba",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "038462790556",
            "subnet_ids": [
              "subnet-029bb56482ad71361"
            ],
            "tags": {
              "Name": "cicd-dev-public-0-acl"
            },
            "tags_all": {
              "Name": "cicd-dev-public-0-acl"
            },
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_subnet_public.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_public_route_table_associaion[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sol_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0711c6c3e6d36a484",
            "route_table_id": "rtb-0216e210f1ebd24ef",
            "subnet_id": "subnet-029bb56482ad71361"
          },
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_subnet_public.aws_subnet.sol_subnet",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_route_table[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sol_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:route-table/rtb-036bb21fbf7ad4094",
            "id": "rtb-036bb21fbf7ad4094",
            "owner_id": "038462790556",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0176627ac4679c218",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cicd-dev-pri-route_table",
              "kubernetes.io/cluster/cicd-dev": "owned"
            },
            "tags_all": {
              "Name": "cicd-dev-pri-route_table",
              "kubernetes.io/cluster/cicd-dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_subnet_private[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sol_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:subnet/subnet-01968b47ffba345a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01968b47ffba345a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "038462790556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cicd-ap-northeast-2a-private-subnet",
              "kubernetes.io/cluster/cicd-dev": "owned"
            },
            "tags_all": {
              "Name": "cicd-ap-northeast-2a-private-subnet",
              "kubernetes.io/cluster/cicd-dev": "owned"
            },
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_subnet_public[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sol_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:subnet/subnet-029bb56482ad71361",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029bb56482ad71361",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "038462790556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cicd-ap-northeast-2a-public-subnet",
              "kubernetes.io/cluster/cicd-dev": "owned"
            },
            "tags_all": {
              "Name": "cicd-ap-northeast-2a-public-subnet",
              "kubernetes.io/cluster/cicd-dev": "owned"
            },
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "dependencies": [
            "data.aws_vpc.vpc_info",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sol_vpc[0]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sol_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:vpc/vpc-06d548fa782df8d8e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07fb7e99ccd20d8dc",
            "default_route_table_id": "rtb-0216e210f1ebd24ef",
            "default_security_group_id": "sg-0d2a359f8885f630a",
            "dhcp_options_id": "dopt-0a03607f9ce8a9f22",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06d548fa782df8d8e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0216e210f1ebd24ef",
            "owner_id": "038462790556",
            "tags": {
              "Name": "cicd"
            },
            "tags_all": {
              "Name": "cicd"
            }
          }
        }
      ]
    },
    {
      "module": "module.sol_worker_asg_sg[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sol_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:038462790556:security-group/sg-047f6c84672273726",
            "description": "Security Group for worker autoscaling group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047f6c84672273726",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "220.118.2.248/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "3.39.156.3/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "cicd-dev-worker-ec2-sg",
            "name_prefix": "",
            "owner_id": "038462790556",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cicd-dev-worker-ec2-sg",
              "kubernetes.io/cluster/cicd/dev": "owned"
            },
            "tags_all": {
              "Name": "cicd-dev-worker-ec2-sg",
              "kubernetes.io/cluster/cicd/dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d548fa782df8d8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_internet_gateway.internet_gateway_info",
            "data.aws_vpc.vpc_info",
            "module.sol_internet_gateway.aws_internet_gateway.sol_internet_gateway",
            "module.sol_nat_eip.aws_eip.sol_eip",
            "module.sol_vpc.aws_vpc.sol_vpc"
          ]
        }
      ]
    }
  ]
}